2012-02-06  No'am Rosenthal  <noam.rosenthal@nokia.com>

        [Qt] Implement ImageBuffer::copyImage(ImageBuffer::DontCopyBackingStore)
        https://bugs.webkit.org/show_bug.cgi?id=77689

        Reviewed by Kenneth Rohde Christiansen.

        Use StillImageQt::createForRendering when using DontCopyBackingStore.
        Enable DontCopyBackingStore in TextureMapperNode.
        This removes deep copies resulting from the use of ImageBuffer.

        Instrumentation shows that deep image copies resulted from ImageBuffer are eliminated.

        * platform/graphics/qt/ImageBufferQt.cpp:
        (WebCore::ImageBuffer::copyImage):
        * platform/graphics/texmap/TextureMapperNode.cpp:
        (WebCore::TextureMapperNode::renderContent):

2012-02-06  Allan Sandfeld Jensen  <allan.jensen@nokia.com>

        WebGestureEvent can not encode delta and area.
        https://bugs.webkit.org/show_bug.cgi?id=77728

        Add area field to PlatformGestureEvent.

        Reviewed by Kenneth Rohde Christiansen.

        * platform/PlatformGestureEvent.h:
        (WebCore::PlatformGestureEvent::PlatformGestureEvent):
        (WebCore::PlatformGestureEvent::area):

2012-02-06  Charles Wei  <charles.wei@torchmobile.com.cn>

        [BlackBerry]Use extension for a mimetype as the suggested extension
        if the url file doesn't have an extension.
        https://bugs.webkit.org/show_bug.cgi?id=76779

        Reviewed by Antonio Gomes.

        No new tests. 

        * platform/network/blackberry/NetworkJob.cpp:
        (WebCore::NetworkJob::sendResponseIfNeeded):

2012-02-06  Kentaro Hara  <haraken@chromium.org>

        Rename [HasIndexGetter], [HasNameGetter] and [HasCustomIndexSetter] IDLs
        https://bugs.webkit.org/show_bug.cgi?id=77848

        Reviewed by Adam Barth.

        For naming consistency with [CustomGetter] and [CustomSetter],
        this patch renames the following IDLs:
