@@ -35,7 +35,10 @@ namespace WebCore {
 
 PassRefPtr<IDBVersionChangeRequest> IDBVersionChangeRequest::create(ScriptExecutionContext* context, PassRefPtr<IDBAny> source, const String& version)
 {
-    return adoptRef(new IDBVersionChangeRequest(context, source, version));
+    RefPtr<IDBVersionChangeRequest> request(adoptRef(new IDBVersionChangeRequest(context, source, version)));
+    request->suspendIfNeeded();
+    return request.release();
+
 }
 
 IDBVersionChangeRequest::IDBVersionChangeRequest(ScriptExecutionContext* context, PassRefPtr<IDBAny> source, const String& version)
